--- a/index.html
+++ b/index.html
@@ -33,15 +33,12 @@
         </code></pre>  
         </figure> 
         </div>
-    </section>
 
-
-    <section class="row center">
         <div class="code-column">
          <figure class="code-card">
           <h2 class="code-header">Flexbox Column</h2>
           <div class="code-body">
-            <p>use this to create a Flexbox column layout</p>
+            <p>Use this to create a Flexbox column layout</p>
             </div>
         <pre class="code-block"><code> .column {
             display: flex;
@@ -50,9 +47,6 @@
         </code></pre>  
         </figure> 
         </div>
-    </section>
-
-    <section class="row center">
         <div class="code-column">
          <figure class="code-card">
           <h2 class="code-header">CSS Grid Layout</h2>
@@ -68,10 +62,6 @@
         </code></pre>  
         </figure> 
         </div>
-    </section>
-
-
- <section class="row center">
         <div class="code-column">
          <figure class="code-card">
           <h2 class="code-header">linear Gradients</h2>
@@ -87,9 +77,6 @@
         </code></pre>  
         </figure> 
         </div>
-    </section>
-    
- <section class="row center">
         <div class="code-column">
          <figure class="code-card">
           <h2 class="code-header">Box Transition Glow</h2>
@@ -109,9 +96,7 @@
         </code></pre>  
         </figure> 
         </div>
-    </section>
-    
-    <section class="row center">
+
         <div class="code-column">
          <figure class="code-card">
           <h2 class="code-header">Overlay Card with Title</h2>
